fix: buy me a coffe button mobile view and lang restore

--- a/src/components/shared/buy-me-a-coffe/button.module.css
+++ b/src/components/shared/buy-me-a-coffe/button.module.css
@@ -26,7 +26,6 @@
 .bmcButtonText {
   margin-left: 8px;
   display: inline-block;
-  line-height: 0;
   width: 100%;
   flex-shrink: 1;
 }
